# nebula-workflow

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  clippy.toml  crates.js  help.html  index.html  nebula-idempotency-docs.md  rustfmt.toml  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml  docs-publish.yml  docs.yml  lint.yml  msrv.yml  release.yml
crates/nebula-core/: Cargo.toml
crates/nebula-core/src/: lib.rs
crates/nebula-engine/: Cargo.toml
crates/nebula-engine/src/: lib.rs
crates/nebula-idempotency/: Cargo.toml
crates/nebula-idempotency/examples/: action_idempotency.rs  api_axum_idempotency.rs  api_deduplication.rs  transaction_idempotency.rs  workflow_checkpoint.rs
crates/nebula-idempotency/src/: lib.rs  prelude.rs
crates/nebula-idempotency/src/action/: executor.rs  mod.rs  trait.rs
crates/nebula-idempotency/src/core/: config.rs  error.rs  key.rs  level.rs  mod.rs
crates/nebula-idempotency/src/integration/: mod.rs  transactional.rs
crates/nebula-idempotency/src/request/: manager.rs  middleware.rs  mod.rs
crates/nebula-idempotency/src/storage/: memory.rs  mod.rs  traits.rs  workflow_memory.rs
crates/nebula-idempotency/src/workflow/: checkpoint.rs  mod.rs  state.rs  strategies.rs
crates/workflow/: Cargo.toml
crates/workflow/src/: lib.rs
nebula_core/: all.html  fn.add.html  fn.hello_core.html  index.html  sidebar-items.js
nebula_engine/: all.html  fn.add.html  fn.hello_engine.html  index.html  sidebar-items.js
nebula_idempotency/: all.html  fn.add.html  index.html  sidebar-items.js
nebula_idempotency/action/: index.html  sidebar-items.js
nebula_idempotency/action/executor/: index.html  sidebar-items.js  struct.IdempotentExecutor.html
nebula_idempotency/action/trait/: index.html  sidebar-items.js  trait.IdempotentAction.html
nebula_idempotency/core/: index.html  sidebar-items.js
nebula_idempotency/core/config/: enum.ConflictBehavior.html  enum.IdempotencyKeyStrategy.html  enum.IdempotencyStorageBackend.html  index.html  sidebar-items.js  struct.IdempotencyConfig.html  struct.ResultCachingConfig.html
nebula_idempotency/core/error/: enum.IdempotencyError.html  index.html  sidebar-items.js
nebula_idempotency/core/key/: index.html  sidebar-items.js  struct.IdempotencyKey.html
nebula_idempotency/core/level/: enum.IdempotencyLevel.html  index.html
nebula_idempotency/integration/: index.html  sidebar-items.js
nebula_idempotency/integration/transactional/: index.html  sidebar-items.js  struct.TransactionManager.html  trait.TransactionalAction.html
nebula_idempotency/prelude/: index.html
nebula_idempotency/request/: index.html  sidebar-items.js
nebula_idempotency/request/cache/: index.html
nebula_idempotency/request/concurrent/: index.html
nebula_idempotency/request/manager/: index.html  (+2 more)
nebula_idempotency/storage/: index.html  sidebar-items.js
nebula_idempotency/workflow/: index.html  sidebar-items.js
search.desc/nebula_core/: nebula_core-desc-0-.js
search.desc/nebula_engine/: nebula_engine-desc-0-.js
search.desc/nebula_idempotency/: nebula_idempotency-desc-0-.js
src/nebula_core/: lib.rs.html
src/nebula_engine/: lib.rs.html
src/nebula_idempotency/: lib.rs.html  prelude.rs.html
(+73 files in other folders)
