[workspace]
members = [
    "crates/nebula-core",
    "crates/nebula-engine",
    "crates/nebula-idempotency"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Nebula Team"]
edition = "2024"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vanyastaff/nebula"
homepage = "https://github.com/vanyastaff/nebula"
documentation = "https://docs.rs/nebula"
readme = "README.md"
keywords = ["workflow", "automation", "orchestration", "pipeline", "dag"]
categories = ["development-tools", "asynchronous"]

[workspace.dependencies]
