[package]
name = "nebula-idempotency"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
axum = "0.7"
http = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
